Fix scrollbar in mobile

--- a/_src/assets/scss/core/_base.scss
+++ b/_src/assets/scss/core/_base.scss
@@ -21,6 +21,7 @@ a {
 
 body {
     min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     line-height: 1.4;
     font-size: 13px;
     color: $color-greyMouse;
@@ -40,6 +41,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
 }
 
 @media all and (min-width: 768px) {
